<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <corp.katet.pathfinder.cameraoverlay.CameraPreview
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|left" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/from_position" />

            <TextView
                android:id="@+id/from_position_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/orientation" />

            <TextView
                android:id="@+id/orientation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/to_position" />

            <TextView
                android:id="@+id/to_position_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/bearing" />

            <TextView
                android:id="@+id/bearing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:text="@string/vertical_bearing" />

            <TextView
                android:id="@+id/vertical_bearing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip" />
        </TableRow>
    </TableLayout>

    <corp.katet.pathfinder.cameraoverlay.MyGLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

</FrameLayout>